--- a/backend/scripts/data_preparation_notebook.ipynb
+++ b/backend/scripts/data_preparation_notebook.ipynb
@@ -45,7 +45,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "print(\"✅ All libraries imported successfully!\")"
+    "print(\"All libraries imported successfully!\")"
    ]
   },
   {
@@ -74,7 +74,7 @@
     "\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
-    "print(f\"\\n✅ Dataset loaded successfully!\")\n",
+    "print(f\"\\nDataset loaded successfully!\")\n",
     "print(f\"Shape: {data.shape}\")\n",
     "print(f\"Number of Rows: {data.shape[0]}\")\n",
     "print(f\"Number of Columns: {data.shape[1]}\")"
