Enhance prediction error handling and improve notebook outputs
- Updated `predict()` function in `app.py` to skip 'Timestamp' column during label encoding and added validation for encoder classes to return meaningful error messages for invalid values.
- Modified output messages in `data_preparation_notebook.ipynb` to remove emojis and improve clarity for missing values, categorical columns, and saved label encoders.
- Adjusted output formatting in `feature_engineering_notebook.ipynb` to enhance readability by removing emojis and ensuring consistent message formatting.
- Updated `model_training_notebook.ipynb` to handle kernel crash errors gracefully and improve clarity in model performance reporting.

--- a/backend/scripts/data_preparation_notebook.ipynb
+++ b/backend/scripts/data_preparation_notebook.ipynb
@@ -159,12 +159,12 @@
     "print(missing)\n",
     "\n",
     "if missing.sum() > 0:\n",
-    "    print(f\"\\n⚠️ Total missing values: {missing.sum()}\")\n",
+    "    print(f\"\\nTotal missing values: {missing.sum()}\")\n",
     "    print(\"\\nDropping rows with missing values...\")\n",
     "    data = data.dropna()\n",
-    "    print(f\"✅ New shape after dropping missing values: {data.shape}\")\n",
+    "    print(f\"New shape after dropping missing values: {data.shape}\")\n",
     "else:\n",
-    "    print(\"\\n✅ No missing values found!\")"
+    "    print(\"\\nNo missing values found!\")"
    ]
   },
   {
@@ -195,9 +195,9 @@
     "\n",
     "duplicates_removed = initial_rows - final_rows\n",
     "\n",
-    "print(f\"\\n📊 Initial rows: {initial_rows}\")\n",
-    "print(f\"📊 Duplicates removed: {duplicates_removed}\")\n",
-    "print(f\"✅ Final shape: {data.shape}\")"
+    "print(f\"\\nInitial rows: {initial_rows}\")\n",
+    "print(f\"Duplicates removed: {duplicates_removed}\")\n",
+    "print(f\"Final shape: {data.shape}\")"
    ]
   },
   {
@@ -226,26 +226,26 @@
     "categorical_cols = data.select_dtypes(include=['object']).columns.tolist()\n",
     "\n",
     "if categorical_cols:\n",
-    "    print(f\"\\n📋 Categorical columns found: {categorical_cols}\")\n",
+    "    print(f\"\\nCategorical columns found: {categorical_cols}\")\n",
     "    \n",
     "    label_encoders = {}\n",
     "    \n",
     "    for col in categorical_cols:\n",
-    "        print(f\"\\n🔄 Encoding '{col}'...\")\n",
+    "        print(f\"\\nEncoding '{col}'...\")\n",
     "        print(f\"   Unique values before encoding: {data[col].nunique()}\")\n",
     "        \n",
     "        le = LabelEncoder()\n",
     "        data[col] = le.fit_transform(data[col])\n",
     "        label_encoders[col] = le\n",
     "        \n",
-    "        print(f\"   ✅ Encoding completed for '{col}'\")\n",
+    "        print(\"   Encoding completed for '{col}'\")\n",
     "    \n",
     "    # Save label encoders for later use\n",
     "    os.makedirs('../models', exist_ok=True)\n",
     "    joblib.dump(label_encoders, '../models/label_encoders.pkl')\n",
-    "    print(\"\\n✅ Label encoders saved to '../models/label_encoders.pkl'\")\n",
+    "    print(\"\\nLabel encoders saved to '../models/label_encoders.pkl'\")\n",
     "else:\n",
-    "    print(\"\\n✅ No categorical columns found!\")"
+    "    print(\"\\nNo categorical columns found!\")"
    ]
   },
   {
@@ -274,10 +274,10 @@
     "\n",
     "data.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"\\n✅ Cleaned data saved to: {output_path}\")\n",
-    "print(f\"✅ Final shape: {data.shape}\")\n",
-    "print(f\"✅ Rows: {data.shape[0]}\")\n",
-    "print(f\"✅ Columns: {data.shape[1]}\")\n",
+    "print(f\"\\nCleaned data saved to: {output_path}\")\n",
+    "print(f\"Final shape: {data.shape}\")\n",
+    "print(f\"Rows: {data.shape[0]}\")\n",
+    "print(f\"Columns: {data.shape[1]}\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"DATA PREPARATION COMPLETED SUCCESSFULLY!\")\n",
