--- a/backend/scripts/feature_engineering_notebook.ipynb
+++ b/backend/scripts/feature_engineering_notebook.ipynb
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f6d5b23c",
    "metadata": {},
    "outputs": [
@@ -870,6 +870,17 @@
       "   2. Proceed to model training\n",
       "   3. Use the saved scaler and encoders for predictions\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -882,16 +893,16 @@
     "\n",
     "data.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"\\n✅ Processed data saved to: {output_path}\")\n",
-    "print(f\"✅ Shape: {data.shape}\")\n",
-    "print(f\"✅ Rows: {data.shape[0]}\")\n",
-    "print(f\"✅ Columns: {data.shape[1]}\")\n",
+    "print(f\"\\nProcessed data saved to: {output_path}\")\n",
+    "print(f\"Shape: {data.shape}\")\n",
+    "print(f\"Rows: {data.shape[0]}\")\n",
+    "print(f\"Columns: {data.shape[1]}\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"FEATURE ENGINEERING COMPLETED SUCCESSFULLY!\")\n",
     "print(\"=\" * 60)\n",
     "\n",
-    "print(\"\\n📌 Next Steps:\")\n",
+    "print(\"\\nNext Steps:\")\n",
     "print(\"   1. Review the processed data\")\n",
     "print(\"   2. Proceed to model training\")\n",
     "print(\"   3. Use the saved scaler and encoders for predictions\")"
