--- a/backend/scripts/feature_engineering_notebook.ipynb
+++ b/backend/scripts/feature_engineering_notebook.ipynb
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "579b14f8",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "30cb8076",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "a1ee02af",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f6d5b23c",
    "metadata": {},
    "outputs": [
@@ -856,30 +856,19 @@
       "SAVING PROCESSED DATA\n",
       "============================================================\n",
       "\n",
-      "✅ Processed data saved to: ../data/women_risk_processed.csv\n",
-      "✅ Shape: (115, 13)\n",
-      "✅ Rows: 115\n",
-      "✅ Columns: 13\n",
+      "Processed data saved to: ../data/women_risk_processed.csv\n",
+      "Shape: (115, 13)\n",
+      "Rows: 115\n",
+      "Columns: 13\n",
       "\n",
       "============================================================\n",
       "FEATURE ENGINEERING COMPLETED SUCCESSFULLY!\n",
       "============================================================\n",
       "\n",
-      "📌 Next Steps:\n",
+      "Next Steps:\n",
       "   1. Review the processed data\n",
       "   2. Proceed to model training\n",
       "   3. Use the saved scaler and encoders for predictions\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
