--- a/backend/women_risk_model_training.ipynb
+++ b/backend/women_risk_model_training.ipynb
@@ -69,7 +69,7 @@
     "sns.set_style('whitegrid')\n",
     "plt.rcParams['figure.figsize'] = (12, 6)\n",
     "\n",
-    "print(\"✅ All libraries imported successfully!\")"
+    "print(\"All libraries imported successfully!\")"
    ]
   },
   {
@@ -162,17 +162,17 @@
     "# Remove Timestamp column if it exists\n",
     "if 'Timestamp' in df.columns:\n",
     "    df = df.drop('Timestamp', axis=1)\n",
-    "    print(\"\\n✅ Timestamp column removed\")\n",
+    "    print(\"\\nTimestamp column removed\")\n",
     "\n",
     "# Drop any rows with missing values\n",
     "if df.isnull().sum().sum() > 0:\n",
     "    df = df.dropna()\n",
-    "    print(f\"✅ Rows with missing values removed\")\n",
+    "    print(f\"Rows with missing values removed\")\n",
     "\n",
     "# Remove duplicates\n",
     "if duplicates > 0:\n",
     "    df = df.drop_duplicates()\n",
-    "    print(f\"✅ Duplicate rows removed\")\n",
+    "    print(f\"Duplicate rows removed\")\n",
     "\n",
     "print(f\"\\nFinal dataset shape: {df.shape}\")"
    ]
@@ -198,12 +198,12 @@
     "    le = LabelEncoder()\n",
     "    df[col] = le.fit_transform(df[col])\n",
     "    label_encoders[col] = le\n",
-    "    print(f\"✅ Encoded: {col}\")\n",
+    "    print(f\"Encoded: {col}\")\n",
     "\n",
     "# Save label encoders\n",
     "os.makedirs('models', exist_ok=True)\n",
     "joblib.dump(label_encoders, 'models/label_encoders.pkl')\n",
-    "print(\"\\n✅ Label encoders saved to 'models/label_encoders.pkl'\")"
+    "print(\"\\nLabel encoders saved to 'models/label_encoders.pkl'\")"
    ]
   },
   {
@@ -315,8 +315,8 @@
     "\n",
     "# Save the scaler\n",
     "joblib.dump(scaler, 'models/scaler.pkl')\n",
-    "print(\"✅ Feature scaling completed\")\n",
-    "print(\"✅ Scaler saved to 'models/scaler.pkl'\")"
+    "print(\"Feature scaling completed\")\n",
+    "print(\"Scaler saved to 'models/scaler.pkl'\")"
    ]
   },
   {
@@ -393,7 +393,7 @@
     "\n",
     "# Find best model\n",
     "best_model_name = max(results, key=lambda x: results[x]['mean_accuracy'])\n",
-    "print(f\"\\n🏆 Best Model: {best_model_name}\")\n",
+    "print(f\"\\nBest Model: {best_model_name}\")\n",
     "print(f\"   Mean Accuracy: {results[best_model_name]['mean_accuracy']:.4f}\")"
    ]
   },
@@ -543,7 +543,7 @@
     "    print(f\"\\nSample {idx}:\")\n",
     "    print(f\"  Predicted: {risk_label} (Probability: {probability[1]:.2%})\")\n",
     "    print(f\"  Actual:    {actual_label}\")\n",
-    "    print(f\"  Correct:   {'✅ Yes' if prediction == actual else '❌ No'}\")\n",
+    "    print(f\"  Correct:   {'Yes' if prediction == actual else 'No'}\")\n",
     "\n",
     "print(\"\\n\" + \"=\"*80)"
    ]
@@ -572,10 +572,10 @@
     "print(\"=\"*60)\n",
     "print(\"MODEL SAVED SUCCESSFULLY\")\n",
     "print(\"=\"*60)\n",
-    "print(f\"\\n✅ Model: {best_model_name}\")\n",
-    "print(f\"✅ Saved to: {model_path}\")\n",
-    "print(f\"✅ Scaler saved to: models/scaler.pkl\")\n",
-    "print(f\"✅ Label encoders saved to: models/label_encoders.pkl\")\n",
+    "print(f\"\\nModel: {best_model_name}\")\n",
+    "print(f\"Saved to: {model_path}\")\n",
+    "print(f\"Scaler saved to: models/scaler.pkl\")\n",
+    "print(f\"Label encoders saved to: models/label_encoders.pkl\")\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "\n",
     "# Create model info file\n",
@@ -608,7 +608,7 @@
     "with open('models/model_info.txt', 'w') as f:\n",
     "    f.write(model_info)\n",
     "\n",
-    "print(\"✅ Model information saved to: models/model_info.txt\")"
+    "print(\"Model information saved to: models/model_info.txt\")"
    ]
   },
   {
@@ -616,7 +616,7 @@
    "id": "dc02fb25",
    "metadata": {},
    "source": [
-    "## ✅ Training Complete!\n",
+    "## Training Complete!\n",
     "\n",
     "The model has been trained successfully and saved. You can now:\n",
     "\n",
