--- a/backend/scripts/gradient_boosting.ipynb
+++ b/backend/scripts/gradient_boosting.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import required libraries for data processing, modeling, and visualization\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -33,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the processed dataset\n",
     "fp = pd.read_csv(\"../data/women_risk_processed.csv\")"
    ]
   },
@@ -43,6 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display first few rows\n",
     "fp.head()"
    ]
   },
@@ -53,6 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check dataset shape (rows, columns)\n",
     "fp.shape"
    ]
   },
@@ -63,10 +67,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prepare features (X) and target (y)\n",
     "target_col = '12. Overall, how would you rate the risk level of harassment in that situation?'\n",
     "X = fp.drop(target_col, axis=1)\n",
     "y = fp[target_col]\n",
     "\n",
+    "# Convert target to binary: High (1) if above median, Low (0) otherwise\n",
     "y = (y > y.median()).astype(int)"
    ]
   },
