--- a/backend/scripts/gradient_boosting.ipynb
+++ b/backend/scripts/gradient_boosting.ipynb
@@ -83,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training (80%) and testing (20%) sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
@@ -93,6 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize Gradient Boosting Classifier\n",
     "model = GradientBoostingClassifier(random_state=42)"
    ]
   },
@@ -103,6 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train the model on training data\n",
     "model.fit(X_train, y_train)"
    ]
   },
