did some modifications

--- a/backend/scripts/gradient_boosting.ipynb
+++ b/backend/scripts/gradient_boosting.ipynb
@@ -116,8 +116,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions on test set\n",
     "y_pred = model.predict(X_test)\n",
-    "y_pred_proba = model.predict_proba(X_test)[:, 1]"
+    "y_pred_proba = model.predict_proba(X_test)[:, 1]  # Get probability for positive class"
    ]
   },
   {
