--- a/backend/scripts/decision_tree.ipynb
+++ b/backend/scripts/decision_tree.ipynb
@@ -10,11 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7f587575",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries for data manipulation, visualization, and modeling\n",
+    "# pandas/numpy: Data handling\n",
+    "# matplotlib/seaborn: Visualization\n",
+    "# sklearn: Machine learning tools (model, metrics, cross-validation)\n",
+    "# joblib: Model serialization\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,17 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ebec65ae",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the preprocessed dataset\n",
+    "# This file contains cleaned and feature-engineered data ready for modeling\n",
     "fp = pd.read_csv(\"../data/women_risk_processed.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "af72d921",
    "metadata": {},
    "outputs": [
@@ -248,12 +256,13 @@
     }
    ],
    "source": [
+    "# Preview the first few rows of the dataset\n",
     "fp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6ae7b093",
    "metadata": {},
    "outputs": [
@@ -269,46 +278,54 @@
     }
    ],
    "source": [
+    "# Check the dimensions of the dataset (rows, columns)\n",
     "fp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0685c414",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prepare features (X) and target variable (y)\n",
+    "# Target: Overall risk level rating column\n",
     "target_col = '12. Overall, how would you rate the risk level of harassment in that situation?'\n",
-    "X = fp.drop(target_col, axis=1)\n",
-    "y = fp[target_col]\n",
+    "X = fp.drop(target_col, axis=1)  # All features except target\n",
+    "y = fp[target_col]  # Target variable\n",
     "\n",
+    "# Convert to binary classification: 1 if above median (high risk), 0 otherwise (low risk)\n",
     "y = (y > y.median()).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d5e5a137",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training (80%) and testing (20%) sets\n",
+    "# stratify=y ensures balanced class distribution in both sets\n",
+    "# random_state=42 for reproducibility\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d50ae11f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize Decision Tree Classifier with default hyperparameters\n",
     "model = DecisionTreeClassifier(random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bb22dfb5",
    "metadata": {},
    "outputs": [
@@ -1210,23 +1227,27 @@
     }
    ],
    "source": [
+    "# Train the Decision Tree model on the training data\n",
     "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "325b6e55",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions on the test set\n",
+    "# y_pred: Binary predictions (0 or 1)\n",
+    "# y_pred_proba: Probability of positive class (for ROC-AUC calculation)\n",
     "y_pred = model.predict(X_test)\n",
     "y_pred_proba = model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1088cc7e",
    "metadata": {},
    "outputs": [
@@ -1242,12 +1263,13 @@
     }
    ],
    "source": [
+    "# Calculate Accuracy: Proportion of correct predictions\n",
     "accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "999187de",
    "metadata": {},
    "outputs": [
@@ -1263,12 +1285,14 @@
     }
    ],
    "source": [
+    "# Calculate Precision: Proportion of positive predictions that are correct\n",
+    "# High precision = fewer false positives\n",
     "precision_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "586718e3",
    "metadata": {},
    "outputs": [
@@ -1284,12 +1308,14 @@
     }
    ],
    "source": [
+    "# Calculate Recall (Sensitivity): Proportion of actual positives correctly identified\n",
+    "# High recall = fewer false negatives\n",
     "recall_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8a8b9190",
    "metadata": {},
    "outputs": [
@@ -1305,12 +1331,14 @@
     }
    ],
    "source": [
+    "# Calculate F1-Score: Harmonic mean of precision and recall\n",
+    "# Balances both metrics (useful for imbalanced datasets)\n",
     "f1_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "64bc9df5",
    "metadata": {},
    "outputs": [
@@ -1326,12 +1354,14 @@
     }
    ],
    "source": [
+    "# Calculate ROC-AUC Score: Model's ability to distinguish between classes\n",
+    "# Score of 1.0 = perfect classifier, 0.5 = random classifier\n",
     "roc_auc_score(y_test, y_pred_proba)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "27d976aa",
    "metadata": {},
    "outputs": [
@@ -1347,12 +1377,13 @@
     }
    ],
    "source": [
+    "# Display comprehensive classification report with all metrics\n",
     "classification_report(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e41dfe7c",
    "metadata": {},
    "outputs": [
@@ -1368,6 +1399,8 @@
     }
    ],
    "source": [
+    "# Visualize Confusion Matrix\n",
+    "# Shows the distribution of true positives, true negatives, false positives, and false negatives\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
@@ -1379,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a2de018c",
    "metadata": {},
    "outputs": [
@@ -1395,6 +1428,9 @@
     }
    ],
    "source": [
+    "# Plot ROC Curve (Receiver Operating Characteristic)\n",
+    "# Visualizes the trade-off between true positive rate and false positive rate\n",
+    "# Higher AUC (Area Under Curve) indicates better model performance\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_pred_proba)\n",
     "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "\n",
@@ -1418,11 +1454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0e2080b0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define hyperparameter grid for tuning\n",
+    "# max_depth: Maximum tree depth (controls overfitting)\n",
+    "# min_samples_split: Minimum samples required to split a node\n",
+    "# min_samples_leaf: Minimum samples required at leaf node\n",
+    "# criterion: Function to measure split quality (gini or entropy)\n",
     "param_grid = {\n",
     "    \"max_depth\": [None, 5, 10, 15, 20],\n",
     "    \"min_samples_split\": [2, 5, 10],\n",
@@ -1433,17 +1474,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "7c107500",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize GridSearchCV for hyperparameter tuning\n",
+    "# cv=5: 5-fold cross-validation\n",
+    "# scoring='accuracy': Optimize for accuracy\n",
+    "# n_jobs=-1: Use all available CPU cores\n",
     "grid = GridSearchCV(DecisionTreeClassifier(random_state=42), param_grid, cv=5, scoring='accuracy', n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "40d1eed3",
    "metadata": {},
    "outputs": [
@@ -2526,12 +2571,14 @@
     }
    ],
    "source": [
+    "# Train the model with all hyperparameter combinations using cross-validation\n",
+    "# This will find the best combination of parameters\n",
     "grid.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "634b78fc",
    "metadata": {},
    "outputs": [
@@ -2545,34 +2592,37 @@
     }
    ],
    "source": [
+    "# Display the best hyperparameters and their cross-validation accuracy\n",
     "print(\"Best parameters:\", grid.best_params_)\n",
     "print(\"Best CV accuracy:\", grid.best_score_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4fd0641a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract the best model from GridSearchCV\n",
     "best_model = grid.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4fe3f361",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions using the tuned model\n",
     "y_pred_tuned = best_model.predict(X_test)\n",
     "y_pred_proba_tuned = best_model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2dab8068",
    "metadata": {},
    "outputs": [
@@ -2588,12 +2638,13 @@
     }
    ],
    "source": [
+    "# Calculate accuracy of the tuned model\n",
     "accuracy_score(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f687ebf8",
    "metadata": {},
    "outputs": [
@@ -2609,12 +2660,13 @@
     }
    ],
    "source": [
+    "# Display classification report for the tuned model\n",
     "classification_report(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "70ea2ab7",
    "metadata": {},
    "outputs": [
@@ -2630,6 +2682,7 @@
     }
    ],
    "source": [
+    "# Visualize confusion matrix for the tuned model\n",
     "cm_tuned = confusion_matrix(y_test, y_pred_tuned)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm_tuned, annot=True, fmt='d', cmap='Greens')\n",
@@ -2641,7 +2694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "9d8099b6",
    "metadata": {},
    "outputs": [
@@ -2657,6 +2710,8 @@
     }
    ],
    "source": [
+    "# Compare model performance before and after hyperparameter tuning\n",
+    "# Visualize all metrics side by side\n",
     "metrics = ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC']\n",
     "before = [accuracy_score(y_test, y_pred), precision_score(y_test, y_pred), \n",
     "          recall_score(y_test, y_pred), f1_score(y_test, y_pred), roc_auc_score(y_test, y_pred_proba)]\n",
@@ -2688,7 +2743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4dc52429",
    "metadata": {},
    "outputs": [
@@ -2701,6 +2756,9 @@
     }
    ],
    "source": [
+    "# Save the trained model to disk for later use\n",
+    "# Creates the models directory if it doesn't exist\n",
+    "# Saves the best model as a pickle file\n",
     "os.makedirs('../models', exist_ok=True)\n",
     "joblib.dump(best_model, '../models/decision_tree_model.pkl')\n",
     "print(\"Model saved!\")"
