Enhance comments for clarity and remove execution counts in logistic regression notebook

--- a/backend/scripts/logistic_regression.ipynb
+++ b/backend/scripts/logistic_regression.ipynb
@@ -10,11 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "61a9f29a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries for data manipulation, visualization, and modeling\n",
+    "# pandas/numpy: Data handling and numerical operations\n",
+    "# matplotlib/seaborn: Data visualization\n",
+    "# sklearn: Machine learning tools (logistic regression, metrics, cross-validation)\n",
+    "# joblib: Model serialization for saving trained models\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,17 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "472338d4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the preprocessed dataset\n",
+    "# This file contains cleaned and feature-engineered data ready for modeling\n",
     "fp = pd.read_csv(\"../data/women_risk_processed.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d227f1b5",
    "metadata": {},
    "outputs": [
@@ -248,12 +256,13 @@
     }
    ],
    "source": [
+    "# Preview the first few rows of the dataset\n",
     "fp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ac423e76",
    "metadata": {},
    "outputs": [
@@ -269,46 +278,56 @@
     }
    ],
    "source": [
+    "# Check the dimensions of the dataset (rows, columns)\n",
     "fp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0d1c4916",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prepare features (X) and target variable (y)\n",
+    "# Target: Overall risk level rating column\n",
     "target_col = '12. Overall, how would you rate the risk level of harassment in that situation?'\n",
-    "X = fp.drop(target_col, axis=1)\n",
-    "y = fp[target_col]\n",
+    "X = fp.drop(target_col, axis=1)  # All features except target\n",
+    "y = fp[target_col]  # Target variable\n",
     "\n",
+    "# Convert to binary classification: 1 if above median (high risk), 0 otherwise (low risk)\n",
     "y = (y > y.median()).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "34cf063e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training (80%) and testing (20%) sets\n",
+    "# stratify=y ensures balanced class distribution in both sets\n",
+    "# random_state=42 for reproducibility\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a4aaacbe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize Logistic Regression model\n",
+    "# max_iter=1000: Maximum iterations for convergence\n",
+    "# random_state=42: For reproducibility\n",
     "model = LogisticRegression(max_iter=1000, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "843f89fc",
    "metadata": {},
    "outputs": [
@@ -1226,23 +1245,27 @@
     }
    ],
    "source": [
+    "# Train the Logistic Regression model on the training data\n",
     "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b7fe9ec1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions on the test set\n",
+    "# y_pred: Binary predictions (0 or 1)\n",
+    "# y_pred_proba: Probability of positive class (for ROC-AUC calculation)\n",
     "y_pred = model.predict(X_test)\n",
     "y_pred_proba = model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f48c6f69",
    "metadata": {},
    "outputs": [
@@ -1258,12 +1281,13 @@
     }
    ],
    "source": [
+    "# Calculate Accuracy: Proportion of correct predictions\n",
     "accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "807461bb",
    "metadata": {},
    "outputs": [
@@ -1279,12 +1303,14 @@
     }
    ],
    "source": [
+    "# Calculate Precision: Proportion of positive predictions that are correct\n",
+    "# High precision = fewer false positives\n",
     "precision_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "80d846fd",
    "metadata": {},
    "outputs": [
@@ -1300,12 +1326,14 @@
     }
    ],
    "source": [
+    "# Calculate Recall (Sensitivity): Proportion of actual positives correctly identified\n",
+    "# High recall = fewer false negatives\n",
     "recall_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "272e6951",
    "metadata": {},
    "outputs": [
@@ -1321,12 +1349,14 @@
     }
    ],
    "source": [
+    "# Calculate F1-Score: Harmonic mean of precision and recall\n",
+    "# Balances both metrics (useful for imbalanced datasets)\n",
     "f1_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3425e56c",
    "metadata": {},
    "outputs": [
@@ -1342,12 +1372,14 @@
     }
    ],
    "source": [
+    "# Calculate ROC-AUC Score: Model's ability to distinguish between classes\n",
+    "# Score of 1.0 = perfect classifier, 0.5 = random classifier\n",
     "roc_auc_score(y_test, y_pred_proba)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b4c2f8e9",
    "metadata": {},
    "outputs": [
@@ -1363,12 +1395,13 @@
     }
    ],
    "source": [
+    "# Display comprehensive classification report with all metrics\n",
     "classification_report(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b409f7bf",
    "metadata": {},
    "outputs": [
@@ -1384,6 +1417,8 @@
     }
    ],
    "source": [
+    "# Visualize Confusion Matrix\n",
+    "# Shows the distribution of true positives, true negatives, false positives, and false negatives\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
@@ -1395,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3757fd7a",
    "metadata": {},
    "outputs": [
@@ -1411,6 +1446,9 @@
     }
    ],
    "source": [
+    "# Plot ROC Curve (Receiver Operating Characteristic)\n",
+    "# Visualizes the trade-off between true positive rate and false positive rate\n",
+    "# Higher AUC (Area Under Curve) indicates better model performance\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_pred_proba)\n",
     "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "\n",
@@ -1434,11 +1472,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d4e92f5d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define hyperparameter grid for tuning\n",
+    "# C: Inverse of regularization strength (smaller values = stronger regularization)\n",
+    "# penalty: Type of regularization (l2 = Ridge regularization)\n",
+    "# solver: Algorithm for optimization (lbfgs for L2, liblinear for small datasets)\n",
     "param_grid = {\n",
     "    \"C\": [0.01, 0.1, 1, 10, 100],\n",
     "    \"penalty\": ['l2'],\n",
@@ -1448,17 +1490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "34ccca43",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize GridSearchCV for hyperparameter tuning\n",
+    "# cv=5: 5-fold cross-validation\n",
+    "# scoring='accuracy': Optimize for accuracy\n",
+    "# n_jobs=-1: Use all available CPU cores\n",
     "grid = GridSearchCV(LogisticRegression(max_iter=1000, random_state=42), param_grid, cv=5, scoring='accuracy', n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "509103b7",
    "metadata": {},
    "outputs": [
@@ -2562,12 +2608,14 @@
     }
    ],
    "source": [
+    "# Train the model with all hyperparameter combinations using cross-validation\n",
+    "# This will find the best combination of parameters\n",
     "grid.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9ee42138",
    "metadata": {},
    "outputs": [
@@ -2581,34 +2629,37 @@
     }
    ],
    "source": [
+    "# Display the best hyperparameters and their cross-validation accuracy\n",
     "print(\"Best parameters:\", grid.best_params_)\n",
     "print(\"Best CV accuracy:\", grid.best_score_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ed49100b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract the best model from GridSearchCV\n",
     "best_model = grid.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4b8524f3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions using the tuned model\n",
     "y_pred_tuned = best_model.predict(X_test)\n",
     "y_pred_proba_tuned = best_model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "fb121b6a",
    "metadata": {},
    "outputs": [
@@ -2624,12 +2675,13 @@
     }
    ],
    "source": [
+    "# Calculate accuracy of the tuned model\n",
     "accuracy_score(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "b758bfc2",
    "metadata": {},
    "outputs": [
@@ -2657,12 +2709,13 @@
     }
    ],
    "source": [
+    "# Display classification report for the tuned model\n",
     "classification_report(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "36c9869f",
    "metadata": {},
    "outputs": [
@@ -2678,6 +2731,7 @@
     }
    ],
    "source": [
+    "# Visualize confusion matrix for the tuned model\n",
     "cm_tuned = confusion_matrix(y_test, y_pred_tuned)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm_tuned, annot=True, fmt='d', cmap='Greens')\n",
@@ -2689,7 +2743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f91c5915",
    "metadata": {},
    "outputs": [
@@ -2713,6 +2767,8 @@
     }
    ],
    "source": [
+    "# Compare model performance before and after hyperparameter tuning\n",
+    "# Visualize all metrics side by side to see improvement\n",
     "metrics = ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC']\n",
     "before = [accuracy_score(y_test, y_pred), precision_score(y_test, y_pred), \n",
     "          recall_score(y_test, y_pred), f1_score(y_test, y_pred), roc_auc_score(y_test, y_pred_proba)]\n",
@@ -2744,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "1f22935b",
    "metadata": {},
    "outputs": [
@@ -2757,6 +2813,9 @@
     }
    ],
    "source": [
+    "# Save the trained model to disk for later use\n",
+    "# Creates the models directory if it doesn't exist\n",
+    "# Saves the best model as a pickle file\n",
     "os.makedirs('../models', exist_ok=True)\n",
     "joblib.dump(best_model, '../models/logistic_regression_model.pkl')\n",
     "print(\"Model saved!\")"
