--- a/backend/scripts/svm.ipynb
+++ b/backend/scripts/svm.ipynb
@@ -10,11 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d16c1f35",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries for data manipulation, visualization, and modeling\n",
+    "# pandas/numpy: Data handling and numerical operations\n",
+    "# matplotlib/seaborn: Data visualization\n",
+    "# sklearn: Machine learning tools (SVM, metrics, cross-validation)\n",
+    "# joblib: Model serialization for saving trained models\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,17 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d043aee3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the preprocessed dataset\n",
+    "# This file contains cleaned and feature-engineered data ready for modeling\n",
     "fp = pd.read_csv(\"../data/women_risk_processed.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2f58b5a1",
    "metadata": {},
    "outputs": [
@@ -248,12 +256,13 @@
     }
    ],
    "source": [
+    "# Preview the first few rows of the dataset\n",
     "fp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "525fd0e6",
    "metadata": {},
    "outputs": [
@@ -269,46 +278,56 @@
     }
    ],
    "source": [
+    "# Check the dimensions of the dataset (rows, columns)\n",
     "fp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d5f356f1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prepare features (X) and target variable (y)\n",
+    "# Target: Overall risk level rating column\n",
     "target_col = '12. Overall, how would you rate the risk level of harassment in that situation?'\n",
-    "X = fp.drop(target_col, axis=1)\n",
-    "y = fp[target_col]\n",
+    "X = fp.drop(target_col, axis=1)  # All features except target\n",
+    "y = fp[target_col]  # Target variable\n",
     "\n",
+    "# Convert to binary classification: 1 if above median (high risk), 0 otherwise (low risk)\n",
     "y = (y > y.median()).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d21c39d9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training (80%) and testing (20%) sets\n",
+    "# stratify=y ensures balanced class distribution in both sets\n",
+    "# random_state=42 for reproducibility\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2eb61e6d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize Support Vector Machine (SVM) Classifier\n",
+    "# probability=True: Enable probability estimates for ROC-AUC calculation\n",
+    "# SVM finds the optimal hyperplane that maximizes the margin between classes\n",
     "model = SVC(probability=True, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "647536e7",
    "metadata": {},
    "outputs": [
@@ -1242,23 +1261,28 @@
     }
    ],
    "source": [
+    "# Train the SVM model on the training data\n",
+    "# The model finds the optimal decision boundary between classes\n",
     "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d3e1e6ce",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions on the test set\n",
+    "# y_pred: Binary predictions (0 or 1)\n",
+    "# y_pred_proba: Probability of positive class (for ROC-AUC calculation)\n",
     "y_pred = model.predict(X_test)\n",
     "y_pred_proba = model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0e180c86",
    "metadata": {},
    "outputs": [
@@ -1274,12 +1298,13 @@
     }
    ],
    "source": [
+    "# Calculate Accuracy: Proportion of correct predictions\n",
     "accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "aac47992",
    "metadata": {},
    "outputs": [
@@ -1295,12 +1320,14 @@
     }
    ],
    "source": [
+    "# Calculate Precision: Proportion of positive predictions that are correct\n",
+    "# High precision = fewer false positives\n",
     "precision_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "67de9ee3",
    "metadata": {},
    "outputs": [
@@ -1316,12 +1343,14 @@
     }
    ],
    "source": [
+    "# Calculate Recall (Sensitivity): Proportion of actual positives correctly identified\n",
+    "# High recall = fewer false negatives\n",
     "recall_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "52617f04",
    "metadata": {},
    "outputs": [
@@ -1337,12 +1366,14 @@
     }
    ],
    "source": [
+    "# Calculate F1-Score: Harmonic mean of precision and recall\n",
+    "# Balances both metrics (useful for imbalanced datasets)\n",
     "f1_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b1e74d64",
    "metadata": {},
    "outputs": [
@@ -1358,12 +1389,14 @@
     }
    ],
    "source": [
+    "# Calculate ROC-AUC Score: Model's ability to distinguish between classes\n",
+    "# Score of 1.0 = perfect classifier, 0.5 = random classifier\n",
     "roc_auc_score(y_test, y_pred_proba)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "112b4b41",
    "metadata": {},
    "outputs": [
@@ -1379,12 +1412,13 @@
     }
    ],
    "source": [
+    "# Display comprehensive classification report with all metrics\n",
     "classification_report(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7645c8d9",
    "metadata": {},
    "outputs": [
@@ -1400,6 +1434,8 @@
     }
    ],
    "source": [
+    "# Visualize Confusion Matrix\n",
+    "# Shows the distribution of true positives, true negatives, false positives, and false negatives\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
@@ -1411,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8f27c47b",
    "metadata": {},
    "outputs": [
@@ -1427,6 +1463,9 @@
     }
    ],
    "source": [
+    "# Plot ROC Curve (Receiver Operating Characteristic)\n",
+    "# Visualizes the trade-off between true positive rate and false positive rate\n",
+    "# Higher AUC (Area Under Curve) indicates better model performance\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_pred_proba)\n",
     "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "\n",
@@ -1450,11 +1489,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "91954fb9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define hyperparameter grid for tuning\n",
+    "# C: Regularization parameter (smaller values = stronger regularization)\n",
+    "# kernel: Type of kernel function ('linear' for linear boundary, 'rbf' for non-linear)\n",
+    "# gamma: Kernel coefficient ('scale' = 1/(n_features*X.var()), 'auto' = 1/n_features)\n",
     "param_grid = {\n",
     "    \"C\": [0.1, 1, 10],\n",
     "    \"kernel\": ['linear', 'rbf'],\n",
@@ -1464,17 +1507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "bff15372",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize GridSearchCV for hyperparameter tuning\n",
+    "# cv=5: 5-fold cross-validation\n",
+    "# scoring='accuracy': Optimize for accuracy\n",
+    "# n_jobs=-1: Use all available CPU cores for parallel processing\n",
     "grid = GridSearchCV(SVC(probability=True, random_state=42), param_grid, cv=5, scoring='accuracy', n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "004d0e08",
    "metadata": {},
    "outputs": [
@@ -2584,12 +2631,14 @@
     }
    ],
    "source": [
+    "# Train the model with all hyperparameter combinations using cross-validation\n",
+    "# This will find the best combination of parameters\n",
     "grid.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "3cfc4739",
    "metadata": {},
    "outputs": [
@@ -2603,34 +2652,37 @@
     }
    ],
    "source": [
+    "# Display the best hyperparameters and their cross-validation accuracy\n",
     "print(\"Best parameters:\", grid.best_params_)\n",
     "print(\"Best CV accuracy:\", grid.best_score_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "20490f8d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract the best model from GridSearchCV\n",
     "best_model = grid.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "6afd6fd4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions using the tuned model\n",
     "y_pred_tuned = best_model.predict(X_test)\n",
     "y_pred_proba_tuned = best_model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f3bd8066",
    "metadata": {},
    "outputs": [
@@ -2646,12 +2698,13 @@
     }
    ],
    "source": [
+    "# Calculate accuracy of the tuned model\n",
     "accuracy_score(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "e55eb516",
    "metadata": {},
    "outputs": [
@@ -2667,12 +2720,13 @@
     }
    ],
    "source": [
+    "# Display classification report for the tuned model\n",
     "classification_report(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a6c894a7",
    "metadata": {},
    "outputs": [
@@ -2688,6 +2742,7 @@
     }
    ],
    "source": [
+    "# Visualize confusion matrix for the tuned model\n",
     "cm_tuned = confusion_matrix(y_test, y_pred_tuned)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm_tuned, annot=True, fmt='d', cmap='Greens')\n",
@@ -2699,7 +2754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5abdc894",
    "metadata": {},
    "outputs": [
@@ -2715,6 +2770,8 @@
     }
    ],
    "source": [
+    "# Compare model performance before and after hyperparameter tuning\n",
+    "# Visualize all metrics side by side to see improvement\n",
     "metrics = ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC']\n",
     "before = [accuracy_score(y_test, y_pred), precision_score(y_test, y_pred), \n",
     "          recall_score(y_test, y_pred), f1_score(y_test, y_pred), roc_auc_score(y_test, y_pred_proba)]\n",
@@ -2746,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "22a29bbc",
    "metadata": {},
    "outputs": [
@@ -2759,6 +2816,9 @@
     }
    ],
    "source": [
+    "# Save the trained model to disk for later use\n",
+    "# Creates the models directory if it doesn't exist\n",
+    "# Saves the best model as a pickle file\n",
     "os.makedirs('../models', exist_ok=True)\n",
     "joblib.dump(best_model, '../models/svm_model.pkl')\n",
     "print(\"Model saved!\")"
