Update execution counts to null and add comments for clarity in data preparation notebook

--- a/backend/scripts/data_preparation.ipynb
+++ b/backend/scripts/data_preparation.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "00c72bd7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -24,17 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "996f0e98",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the raw dataset\n",
     "fp = pd.read_csv(\"../data/women_risk.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "18f70f96",
    "metadata": {},
    "outputs": [
@@ -244,12 +246,13 @@
     }
    ],
    "source": [
+    "# Display first few rows\n",
     "fp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f4b93dfe",
    "metadata": {},
    "outputs": [
@@ -265,12 +268,13 @@
     }
    ],
    "source": [
+    "# Check dataset dimensions\n",
     "fp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d8934ca7",
    "metadata": {},
    "outputs": [
@@ -302,12 +306,13 @@
     }
    ],
    "source": [
+    "# Get information about data types and non-null counts\n",
     "fp.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "331aa3b5",
    "metadata": {},
    "outputs": [
@@ -336,22 +341,24 @@
     }
    ],
    "source": [
+    "# Check for missing values in each column\n",
     "fp.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f5030a25",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove rows with missing values\n",
     "fp = fp.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "822d8979",
    "metadata": {},
    "outputs": [
@@ -367,22 +374,24 @@
     }
    ],
    "source": [
+    "# Check dimensions after removing missing values\n",
     "fp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8c6a9b74",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove duplicate rows\n",
     "fp = fp.drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cb8066c1",
    "metadata": {},
    "outputs": [
@@ -398,12 +407,13 @@
     }
    ],
    "source": [
+    "# Check dimensions after removing duplicates\n",
     "fp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9920f354",
    "metadata": {},
    "outputs": [
@@ -440,17 +450,19 @@
     }
    ],
    "source": [
+    "# Identify all categorical (object type) columns\n",
     "categorical_cols = fp.select_dtypes(include=['object']).columns.tolist()\n",
     "categorical_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "93bbc511",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Encode categorical columns to numeric values using LabelEncoder\n",
     "label_encoders = {}\n",
     "\n",
     "for col in categorical_cols:\n",
@@ -461,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7a6c4c32",
    "metadata": {},
    "outputs": [
@@ -671,12 +683,13 @@
     }
    ],
    "source": [
+    "# Verify encoded data\n",
     "fp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "cf21f1f0",
    "metadata": {},
    "outputs": [
@@ -692,23 +705,25 @@
     }
    ],
    "source": [
+    "# Save label encoders for later use during prediction\n",
     "os.makedirs('../models', exist_ok=True)\n",
     "joblib.dump(label_encoders, '../models/label_encoders.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ed7e3c23",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save cleaned dataset for feature engineering\n",
     "fp.to_csv(\"../data/women_risk_cleaned.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2c90dd3b",
    "metadata": {},
    "outputs": [
@@ -724,6 +739,7 @@
     }
    ],
    "source": [
+    "# Verify final dataset shape\n",
     "fp.shape"
    ]
   }
